Fluid bake not possible in windows using a python script from the command line results in empty cache #41865

Closed
opened 2014-09-18 18:53:14 +02:00 by Gottfried Hofmann · 7 comments

System Information
Operating system and graphics card

Windows 7 64 Bit Geforce 730M

Blender Version
Broken: 2.72 textbuild, 2.70 win64

Short description of error
Baking fluid from command line using a Python script executing "bpy.ops.fluid.bake("INVOKE_DEFAULT")" fails in Windows but works on Linux.

Exact steps for others to reproduce the error
Download fluid.py3.blend and run it from console with -b and --python-text bake_all.py

Works on Linux, on Windows only a directory is created for the cache that does not contain any files.

**System Information** Operating system and graphics card Windows 7 64 Bit Geforce 730M **Blender Version** Broken: 2.72 textbuild, 2.70 win64 **Short description of error** Baking fluid from command line using a Python script executing "bpy.ops.fluid.bake("INVOKE_DEFAULT")" fails in Windows but works on Linux. **Exact steps for others to reproduce the error** Download [fluid.py3.blend](https://archive.blender.org/developer/F111069/fluid.py3.blend) and run it from console with -b and --python-text bake_all.py Works on Linux, on Windows only a directory is created for the cache that does not contain any files.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

Seems like this bug is a Zombie: https://developer.blender.org/T28725

Seems like this bug is a Zombie: https://developer.blender.org/T28725

This issue was referenced by d804a5eaf4

This issue was referenced by d804a5eaf40caab0438e7c5cf1d092e7e8c8cf2a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d804a5eaf4.

Closed by commit d804a5eaf4.

Thank you for the quick fix, confirmed that it is working now!

Thank you for the quick fix, confirmed that it is working now!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41865
No description provided.