Fix T41865: Fluid bake not possible in windows using a python script from the command line

Stupid missing variables initialization.